--- a/assets/inital-config.json
+++ b/assets/inital-config.json
@@ -6,5 +6,5 @@
   "punjabiFontSize": 19,
   "groupStanzas": false,
   "centerAlignment": false,
-  "themeType": "night"
+  "themeType": "Theme 1"
 }
