--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
         "comma-dangle": ["error", "never"],
         "class-methods-use-this": 0,
         "no-nested-ternary": 0,
-        "no-plusplus": 0
+        "no-plusplus": 0,
+        "no-await-in-loop": 0
     }
 }
