--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "class-methods-use-this": 0,
         "no-nested-ternary": 0,
         "no-plusplus": 0,
-        "no-await-in-loop": 0
+        "no-await-in-loop": 0,
+        "no-restricted-syntax": 0
     }
 }
