--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@expo/vector-icons": "^6.2.1",
     "babel-eslint": "^8.0.3",
     "expo": "^24.0.0",
+    "expo-analytics": "^1.0.6",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
