--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-eslint": "^8.0.3",
     "expo": "^24.0.0",
     "expo-analytics": "^1.0.6",
+    "nativetalk": "^1.0.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-24.0.0.tar.gz",
